traces/bug_573.txt
examples++-load/MetricKuate.cpp:670: error: STATIC_INITIALIZATION_ORDER_FIASCO
  Initializer of callDoLoadInit accesses global variable from a different translation unit: std::cout|.
Showing all 4 steps of the trace


examples++-load/MetricKuate.cpp:670:1: initialization of callDoLoadInit
668.     Global.Add("MetricKuate","(", new OneOperatorCode<MetricKuate >( ));
669.   }
670. > LOADFUNC(Load_Init)

examples++-load/MetricKuate.cpp:670:1: call to DoLoadInit
668.     Global.Add("MetricKuate","(", new OneOperatorCode<MetricKuate >( ));
669.   }
670. > LOADFUNC(Load_Init)

examples++-load/MetricKuate.cpp:670:1: call to addInitFunct
  668.     Global.Add("MetricKuate","(", new OneOperatorCode<MetricKuate >( ));
  669.   }
  670. > LOADFUNC(Load_Init)

src/fflib/InitFunct.cpp:80:23: access to std::cout|
  78.        ){ 
  79.       getInitFunctlist()->push_back(make_pair(i,f));
  80.       if(verbosity>9)   cout << " -- addInitFunct: " << i << " " << f 
                              ^
  81.   			   << " " <<  (name ? name : "" ) <<endl; 
  82.     }
